0027569: [Regression in 6.9.0] Projecting a curve hangs

Parameterization speed is taken into account to avoid ProjLib projector usage in case of bad input data.
Test case is added.
Test cases correction.